CS_PROD_20150209_01/Metadata/unpackaged/objects/fw1__Invoice_Line__c.object
<CustomObject>
    <fields>
        <fullName>Air_Date__c</fullName>
        <label>Air Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Air_Time__c</fullName>
        <label>Air Time</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_and_Station__c</fullName>
        <label>Market and Station</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Title__c</fullName>
        <label>Program Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Amount__c</fullName>
        <formula>fw1__Net_Amount__c  +  fw1__Sales_Tax__c +  fw1__Shipping_And_Handling__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fw1__Discount_Quantity__c</fullName>
        <label>Discount Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fw1__Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>fw1__Invoice__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fw1__Item_Description__c</fullName>
        <label>Item Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fw1__License_Term_Years__c</fullName>
        <label>License Term (Years)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fw1__Net_Amount__c</fullName>
        <formula>ROUND(( ( fw1__Quantity__c - fw1__Discount_Quantity__c ) * fw1__Unit_Price__c ) - fw1__Total_Discount_Amount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Non_Installment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Installment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fw1__Note_1__c</fullName>
        <label>Note 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fw1__Note_2__c</fullName>
        <label>Note 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fw1__Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fw1__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fw1__Recurring_Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Invoice Line</label>
        <referenceTo>fw1__Recurring_Invoice_Line__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fw1__Sales_Tax_Rate__c</fullName>
        <label>Sales Tax Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fw1__Sales_Tax__c</fullName>
        <formula>IF( fw1__Taxable__c, fw1__Net_Amount__c  *  fw1__Sales_Tax_Rate__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Shipping_And_Handling__c</fullName>
        <label>Shipping And Handling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Taxable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fw1__Total_Discount_Amount__c</fullName>
        <formula>((( fw1__Quantity__c  -  fw1__Discount_Quantity__c ) *  fw1__Unit_Price__c ) *  fw1__Discount_Percentage__c)
+
fw1__Discount_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw2__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fw2__Quote_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invoice Line</label>
    <nameField>
        <label>Line Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <recordTypes>
        <fullName>Invoice_Line</fullName>
        <active>true</active>
        <label>Invoice Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>Locked_Invoice_Line</fullName>
        <active>true</active>
        <label>Locked Invoice Line</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Locked_Invoice_Line</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Locked__c=TRUE,NOT(ISCHANGED(Locked__c)))</errorConditionFormula>
        <errorMessage>This record is closed and can&apos;t be edited.</errorMessage>
    </validationRules>
</CustomObject>